fix: alignment

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,20 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Playwrite VN", serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f5f5f5;
+  background-color: #fb9ec6;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: "Playwrite VN", serif;
+}
+
+h2 {
+  color: white;
+  font-size: 30px;
+}
+
+.App {
+  margin-top: 100px;
 }
